force-app/main/default/objects/Krow__Billing_Type__c/Krow__Billing_Type__c.object-meta.xml
<CustomObject>
    <label>Billing Type</label>
    <nameField>
        <label>Billing Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>