force-app/main/default/objects/Krow__Billing_Type__c/fields/Krow__Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Time &amp; Expense</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>% Complete</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>