force-app/main/default/objects/Krow__Billing_Type__c/fields/Krow__Pre_Paid_Hours_Limit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Pre_Paid_Hours_Limit__c</fullName>
    <label>Pre Paid Hours Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>