force-app/main/default/objects/Krow__Billing_Type__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Billing_Method__c</columns>
    <columns>Krow__Account_Code__c</columns>
    <columns>Krow__Default_Product__c</columns>
    <columns>Krow__Pre_Paid_Hours_Limit__c</columns>
    <columns>Krow__Bill_On_Overage__c</columns>
    <columns>Krow__Excess_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>